--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <body>
-<h1>Nuubb's Status</h1>
-<p>Test text</p>
+	<h1>Nuubb's Status</h1>
+	<p>Test text</p>
+	<input id="id1" type="number" min="100" max="300" required>
+	<button onclick="myFunction()">OK</button>
+
+	<script>
+		function myFunction() {
+			const inpObj = document.getElementById("id1");
+			if (!inpObj.checkValidity()) {
+				document.getElementById("demo").innerHTML = inpObj.validationMessage;
+			}
+		}
+	</script>
+
+
+
 </body>
+
 </html>
