--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html>
-
-<body>
+<head>
+	<script src="scripts.js"></script>
+	<script src="push.min.js"></script>
+	<script src="serviceWorker.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+</head>
+<body>	
 	<h1>Nuubb's Status</h1>
-	<p>Test text</p>
-	<input id="id1" type="number" min="100" max="300" required>
-	<button onclick="myFunction()">OK</button>
-
-	<script>
-		function myFunction() {
-			const inpObj = document.getElementById("id1");
-			if (!inpObj.checkValidity()) {
-				document.getElementById("demo").innerHTML = inpObj.validationMessage;
-			}
-		}
-	</script>
-
+	<p id="line">Player is</p>
+	<p id="line2">Click to start</p>
+	<button onclick="MyFunction()">Dont Press This</button>
+	<button onclick="PushNotif()">Push Notification Test Button</button>
 
 
 </body>
