--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>	
 	<h1>Nuubb's Status</h1>
-	<p id="line">Player is</p>
+	<p id="line">Shows the online status of Nuubb</p>
 	<p id="line2">Click to start</p>
-	<button onclick="MyFunction()">Dont Press This</button>
-	<button onclick="PushNotif()">Push Notification Test Button</button>
+	<button onclick="MyFunction()">Start The Track</button>
 
 
 </body>
