Made the website a live webstie

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	<h1>Nuubb's Status</h1>
 	<p id="line">Shows the online status of Nuubb</p>
 	<p id="line2">Click to start</p>
-	<button onclick="MyFunction()">Start The Track</button>
-
+	<p id="run1">Not Running</p>
 
 </body>
 
