--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>	
 	<h1>Nuubb's Status</h1>
 	<p id="line">Shows the online status of Nuubb</p>
-	<p id="line2">Click to start</p>
-	<p id="run1">Not Running</p>
+	<p id="line2">Player is Online</p>
 
 </body>
 
